- Color icon border now reflects the color's edge color.
- Changing to draw mode while in free camera now causes the camera to be changed to top.
- Corrections to the primitive generator:
	- Fixed: "Hi-Res" was not prepended to the names of 48/ primitives.
	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
	- Added support for multiple spaces before the ring number.

=================================================
== Changes in version 0.2-alpha
=================================================

- Completely rewrote history (undo/redo) code, making it a LOT stabler in the process.
- Added ability to snap to pre-existing vertices while drawing.
- Replaced the radial type with a single action to generate primitives.
- Replaced parts list in subfile item list with a primitive listing. Listing is generated either if
	it's not cached (prims.cfg in configuration directory) or on user demand. Primitives can be categorised
	with the use of a regex-based configuration file, with a valid default which should cater to most users.
- Added an export to file action, moved it + insert from to File menu
- Added the message log - instead of being a separate text widget as originally planned, messages are
	drawn into the viewport. Messages expire after 5 seconds.
- Parts are now zoomed to fit properly, making the initial view of the part clearer.
- Replace coords: allow replacing all coords regardless of original value, plus relative moving (offset)
- Objects can now be edited by double-clicking on them.
- When drawing, drawn vertices now display coordinate labels.
- Added an action to quickly toggle BFC red/green view.
- Objects are now copied to the system clipboard as LDraw code, rather than to an internal clipboard not
	accessible outside of LDForge.
- Changed default keys for Y-axis moving from PgUp/PgDown to Home and End ala MLCAD.
- Cleaned up the toolbars, removed clutter by removing most of the not-so-often-used items, though of course